fixes img spacing on feed page

--- a/src/UI/ImageSlider.module.scss
+++ b/src/UI/ImageSlider.module.scss
@@ -9,7 +9,7 @@
 
 .img_container {
   padding: 0 10px;
-  width: 600px;
+  width: 564px;
   
 }
 
